vlib/v/checker/tests/match_duplicate_branch_mixed_int_literals.vv
fn parse(ch u8) ! {
	match ch {
		` `, `\t`, `\n`, 10 {
			// consume blanks
		}
		`<` {
			println('open')
		}
		else {
			return error('root invalid char')
		}
	}
}

fn parse_cast(ch u8) ! {
	match ch {
		`\n`, u8(10) {
			println('line feed')
		}
		else {
			return error('root invalid char')
		}
	}
}

fn main() {
	parse(`<`)!
	parse_cast(`\n`)!
}
